src/styles/components/tag.scss
@use '../abstracts/variables';
@use '../abstracts/mixins';

.shadowWrapper {
  @include mixins.miter-shadow;
}

.tag {
  @include mixins.miter(1);
  border: none;
  border-radius: 3px;
  padding: 0;
  user-select: none;
  white-space: nowrap;
  cursor: default;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  height: 26px;
  cursor: default;
  font-size: 11px;
  vertical-align: middle;
  background-color: variables.$grey-2;
  color: variables.$text--white;
  padding-left: 23px;
  padding-right: 23px;

  &:focus-visible {
    outline: none;
  }

  &.outlined {
    background-color: variables.$white;
    color: variables.$grey-2;
    transition: background-color 0s, clip-path 0s !important;
    @include mixins.miter-border(1, 1, variables.$grey-4);
  }

  @each $name, $color in variables.$colors {
    &.#{'' + $name} {
      background-color: $color;
      color: variables.$text--white;

      &.outlined {
        @include mixins.miter-border(1, 1, $color);
        color: $color;
        background-color: variables.$white;
      }
    }
  }

  &.disabled {
    cursor: not-allowed;
    background-color: variables.$disabled !important;
    color: variables.$grey-4 !important;

    &.outlined {
      @include mixins.miter-border(1, 1, variables.$grey-4);
    }
  }
}

